# -*- CMake -*-

####################################################################################################
#
# Sub directories
#

add_subdirectory(bleaudb)
add_subdirectory(camptocamp)
add_subdirectory(documents)
add_subdirectory(ephemeride)
add_subdirectory(international_morse_code_engine)
add_subdirectory(network)
add_subdirectory(refuge)
add_subdirectory(rrd)
add_subdirectory(settings)
add_subdirectory(sqlite)

####################################################################################################
#
# End
#
####################################################################################################
