# -*- CMake -*-

####################################################################################################
#
# $ALPINE_TOOLKIT_BEGIN_LICENSE:GPL3$
#
# Copyright (C) 2017 Fabrice Salvaire
# Contact: http://www.fabrice-salvaire.fr
#
# This file is part of the QtCarto library.
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.
#
# $ALPINE_TOOLKIT_END_LICENSE$
#
####################################################################################################

####################################################################################################
#
# Sub directories
#

add_subdirectory(bleaudb)
add_subdirectory(camptocamp)
add_subdirectory(documents)
add_subdirectory(ephemeride)
add_subdirectory(full_text_search)
add_subdirectory(international_morse_code_engine)
add_subdirectory(network)
add_subdirectory(orm)
add_subdirectory(refuge)
add_subdirectory(rrd)
add_subdirectory(settings)
add_subdirectory(sqlite)

####################################################################################################
#
# End
#
####################################################################################################
